antlr/KDParser.py
# Generated from KDParser.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class KDParser ( Parser ):

    grammarFileName = "KDParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'@\"\"\"'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'..'", "'<..<'", "'<..'", 
                     "'..<'", "'.'", "':'", "';'", "'='", "'{'", "'}'", 
                     "'('", "<INVALID>", "'['", "']'", "','", "'/'", "'-'", 
                     "'@'", "'+'", "'_'", "'.blob('" ]

    symbolicNames = [ "<INVALID>", "NULL", "TRUE", "FALSE", "URL", "FloatLiteral", 
                      "DoubleLiteral", "DecimalLiteral", "IntegerLiteral", 
                      "HexLiteral", "BinLiteral", "LongLiteral", "Version", 
                      "SimpleString", "RawString", "BlockStringStart", "BlockRawStringStart", 
                      "BlockRawAltStringStart", "CharLiteral", "CompoundDuration", 
                      "DayDuration", "HourDuration", "MinuteDuration", "SecondDuration", 
                      "MillisecondDuration", "NanosecondDuration", "Date", 
                      "Time", "IntegerQuantityLiteral", "DecimalQuantityLiteral", 
                      "InclusiveRangeOp", "ExclusiveRangeOp", "ExclusiveLeftOp", 
                      "ExclusiveRightOp", "DOT", "COLON", "SEMICOLON", "EQUALS", 
                      "OPEN", "CLOSE", "LPAREN", "RPAREN", "LSQUARE", "RSQUARE", 
                      "COMMA", "SLASH", "DASH", "AT", "PLUS", "UNDERSCORE", 
                      "BLOB_START", "ID", "BlockComment", "LineComment", 
                      "WS", "NL", "BLOB_DATA", "BLOB_END", "BLOB_ERROR", 
                      "BlockStringChunk", "BlockStringEnd", "BlockStringError", 
                      "BlockRawStringChunk", "BlockRawStringEnd", "BlockRawStringError", 
                      "BlockRawAltStringChunk", "BlockRawAltStringEnd" ]

    RULE_tagList = 0
    RULE_tag = 1
    RULE_value = 2
    RULE_stringLiteral = 3
    RULE_blockString = 4
    RULE_blockRawString = 5
    RULE_blockRawAltString = 6
    RULE_duration = 7
    RULE_quantity = 8
    RULE_rangeOp = 9
    RULE_intRange = 10
    RULE_longRange = 11
    RULE_floatRange = 12
    RULE_doubleRange = 13
    RULE_decimalRange = 14
    RULE_durationRange = 15
    RULE_dateTimeRange = 16
    RULE_versionRange = 17
    RULE_charRange = 18
    RULE_stringRange = 19
    RULE_quantityRange = 20
    RULE_range_ = 21
    RULE_blob = 22
    RULE_valueList = 23
    RULE_attribute = 24
    RULE_attributeList = 25
    RULE_nsName = 26
    RULE_list_ = 27
    RULE_pair = 28
    RULE_map_ = 29
    RULE_annotation = 30
    RULE_annotationList = 31
    RULE_dateTime = 32

    ruleNames =  [ "tagList", "tag", "value", "stringLiteral", "blockString", 
                   "blockRawString", "blockRawAltString", "duration", "quantity", 
                   "rangeOp", "intRange", "longRange", "floatRange", "doubleRange", 
                   "decimalRange", "durationRange", "dateTimeRange", "versionRange", 
                   "charRange", "stringRange", "quantityRange", "range_", 
                   "blob", "valueList", "attribute", "attributeList", "nsName", 
                   "list_", "pair", "map_", "annotation", "annotationList", 
                   "dateTime" ]

    EOF = Token.EOF
    NULL=1
    TRUE=2
    FALSE=3
    URL=4
    FloatLiteral=5
    DoubleLiteral=6
    DecimalLiteral=7
    IntegerLiteral=8
    HexLiteral=9
    BinLiteral=10
    LongLiteral=11
    Version=12
    SimpleString=13
    RawString=14
    BlockStringStart=15
    BlockRawStringStart=16
    BlockRawAltStringStart=17
    CharLiteral=18
    CompoundDuration=19
    DayDuration=20
    HourDuration=21
    MinuteDuration=22
    SecondDuration=23
    MillisecondDuration=24
    NanosecondDuration=25
    Date=26
    Time=27
    IntegerQuantityLiteral=28
    DecimalQuantityLiteral=29
    InclusiveRangeOp=30
    ExclusiveRangeOp=31
    ExclusiveLeftOp=32
    ExclusiveRightOp=33
    DOT=34
    COLON=35
    SEMICOLON=36
    EQUALS=37
    OPEN=38
    CLOSE=39
    LPAREN=40
    RPAREN=41
    LSQUARE=42
    RSQUARE=43
    COMMA=44
    SLASH=45
    DASH=46
    AT=47
    PLUS=48
    UNDERSCORE=49
    BLOB_START=50
    ID=51
    BlockComment=52
    LineComment=53
    WS=54
    NL=55
    BLOB_DATA=56
    BLOB_END=57
    BLOB_ERROR=58
    BlockStringChunk=59
    BlockStringEnd=60
    BlockStringError=61
    BlockRawStringChunk=62
    BlockRawStringEnd=63
    BlockRawStringError=64
    BlockRawAltStringChunk=65
    BlockRawAltStringEnd=66

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class TagListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(KDParser.NL)
            else:
                return self.getToken(KDParser.NL, i)

        def tag(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KDParser.TagContext)
            else:
                return self.getTypedRuleContext(KDParser.TagContext,i)


        def getRuleIndex(self):
            return KDParser.RULE_tagList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTagList" ):
                listener.enterTagList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTagList" ):
                listener.exitTagList(self)




    def tagList(self):

        localctx = KDParser.TagListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_tagList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==KDParser.NL:
                self.state = 66
                self.match(KDParser.NL)
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << KDParser.NULL) | (1 << KDParser.TRUE) | (1 << KDParser.FALSE) | (1 << KDParser.URL) | (1 << KDParser.FloatLiteral) | (1 << KDParser.DoubleLiteral) | (1 << KDParser.DecimalLiteral) | (1 << KDParser.IntegerLiteral) | (1 << KDParser.HexLiteral) | (1 << KDParser.BinLiteral) | (1 << KDParser.LongLiteral) | (1 << KDParser.Version) | (1 << KDParser.SimpleString) | (1 << KDParser.RawString) | (1 << KDParser.BlockStringStart) | (1 << KDParser.BlockRawStringStart) | (1 << KDParser.BlockRawAltStringStart) | (1 << KDParser.CharLiteral) | (1 << KDParser.CompoundDuration) | (1 << KDParser.DayDuration) | (1 << KDParser.HourDuration) | (1 << KDParser.MinuteDuration) | (1 << KDParser.SecondDuration) | (1 << KDParser.MillisecondDuration) | (1 << KDParser.NanosecondDuration) | (1 << KDParser.Date) | (1 << KDParser.IntegerQuantityLiteral) | (1 << KDParser.DecimalQuantityLiteral) | (1 << KDParser.LSQUARE) | (1 << KDParser.AT) | (1 << KDParser.UNDERSCORE) | (1 << KDParser.BLOB_START) | (1 << KDParser.ID))) != 0):
                self.state = 72
                self.tag()
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==KDParser.NL:
                    self.state = 73
                    self.match(KDParser.NL)
                    self.state = 78
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TagContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attributeList(self):
            return self.getTypedRuleContext(KDParser.AttributeListContext,0)


        def SEMICOLON(self):
            return self.getToken(KDParser.SEMICOLON, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(KDParser.NL)
            else:
                return self.getToken(KDParser.NL, i)

        def nsName(self):
            return self.getTypedRuleContext(KDParser.NsNameContext,0)


        def valueList(self):
            return self.getTypedRuleContext(KDParser.ValueListContext,0)


        def OPEN(self):
            return self.getToken(KDParser.OPEN, 0)

        def tagList(self):
            return self.getTypedRuleContext(KDParser.TagListContext,0)


        def CLOSE(self):
            return self.getToken(KDParser.CLOSE, 0)

        def annotationList(self):
            return self.getTypedRuleContext(KDParser.AnnotationListContext,0)


        def getRuleIndex(self):
            return KDParser.RULE_tag

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTag" ):
                listener.enterTag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTag" ):
                listener.exitTag(self)




    def tag(self):

        localctx = KDParser.TagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_tag)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==KDParser.AT:
                    self.state = 84
                    self.annotationList()
                    self.state = 88
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==KDParser.NL:
                        self.state = 85
                        self.match(KDParser.NL)
                        self.state = 90
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 93
                self.nsName()
                self.state = 95
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 94
                    self.valueList()


                pass

            elif la_ == 2:
                self.state = 97
                self.valueList()
                pass


            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 100
                self.attributeList()


            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 103
                self.match(KDParser.SEMICOLON)

            elif la_ == 2:
                self.state = 104
                self.match(KDParser.NL)

            elif la_ == 3:
                self.state = 105
                self.match(KDParser.OPEN)
                self.state = 106
                self.tagList()
                self.state = 107
                self.match(KDParser.CLOSE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stringLiteral(self):
            return self.getTypedRuleContext(KDParser.StringLiteralContext,0)


        def CharLiteral(self):
            return self.getToken(KDParser.CharLiteral, 0)

        def ID(self):
            return self.getToken(KDParser.ID, 0)

        def IntegerLiteral(self):
            return self.getToken(KDParser.IntegerLiteral, 0)

        def HexLiteral(self):
            return self.getToken(KDParser.HexLiteral, 0)

        def BinLiteral(self):
            return self.getToken(KDParser.BinLiteral, 0)

        def LongLiteral(self):
            return self.getToken(KDParser.LongLiteral, 0)

        def FloatLiteral(self):
            return self.getToken(KDParser.FloatLiteral, 0)

        def DoubleLiteral(self):
            return self.getToken(KDParser.DoubleLiteral, 0)

        def DecimalLiteral(self):
            return self.getToken(KDParser.DecimalLiteral, 0)

        def TRUE(self):
            return self.getToken(KDParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(KDParser.FALSE, 0)

        def NULL(self):
            return self.getToken(KDParser.NULL, 0)

        def list_(self):
            return self.getTypedRuleContext(KDParser.List_Context,0)


        def map_(self):
            return self.getTypedRuleContext(KDParser.Map_Context,0)


        def dateTime(self):
            return self.getTypedRuleContext(KDParser.DateTimeContext,0)


        def duration(self):
            return self.getTypedRuleContext(KDParser.DurationContext,0)


        def quantity(self):
            return self.getTypedRuleContext(KDParser.QuantityContext,0)


        def URL(self):
            return self.getToken(KDParser.URL, 0)

        def range_(self):
            return self.getTypedRuleContext(KDParser.Range_Context,0)


        def Version(self):
            return self.getToken(KDParser.Version, 0)

        def blob(self):
            return self.getTypedRuleContext(KDParser.BlobContext,0)


        def getRuleIndex(self):
            return KDParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = KDParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_value)
        try:
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.stringLiteral()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.match(KDParser.CharLiteral)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 113
                self.match(KDParser.ID)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 114
                self.match(KDParser.IntegerLiteral)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 115
                self.match(KDParser.HexLiteral)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 116
                self.match(KDParser.BinLiteral)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 117
                self.match(KDParser.LongLiteral)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 118
                self.match(KDParser.FloatLiteral)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 119
                self.match(KDParser.DoubleLiteral)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 120
                self.match(KDParser.DecimalLiteral)
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 121
                self.match(KDParser.TRUE)
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 122
                self.match(KDParser.FALSE)
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 123
                self.match(KDParser.NULL)
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 124
                self.list_()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 125
                self.map_()
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 126
                self.dateTime()
                pass

            elif la_ == 17:
                self.enterOuterAlt(localctx, 17)
                self.state = 127
                self.duration()
                pass

            elif la_ == 18:
                self.enterOuterAlt(localctx, 18)
                self.state = 128
                self.quantity()
                pass

            elif la_ == 19:
                self.enterOuterAlt(localctx, 19)
                self.state = 129
                self.match(KDParser.URL)
                pass

            elif la_ == 20:
                self.enterOuterAlt(localctx, 20)
                self.state = 130
                self.range_()
                pass

            elif la_ == 21:
                self.enterOuterAlt(localctx, 21)
                self.state = 131
                self.match(KDParser.Version)
                pass

            elif la_ == 22:
                self.enterOuterAlt(localctx, 22)
                self.state = 132
                self.blob()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringLiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SimpleString(self):
            return self.getToken(KDParser.SimpleString, 0)

        def RawString(self):
            return self.getToken(KDParser.RawString, 0)

        def blockString(self):
            return self.getTypedRuleContext(KDParser.BlockStringContext,0)


        def blockRawString(self):
            return self.getTypedRuleContext(KDParser.BlockRawStringContext,0)


        def blockRawAltString(self):
            return self.getTypedRuleContext(KDParser.BlockRawAltStringContext,0)


        def getRuleIndex(self):
            return KDParser.RULE_stringLiteral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringLiteral" ):
                listener.enterStringLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringLiteral" ):
                listener.exitStringLiteral(self)




    def stringLiteral(self):

        localctx = KDParser.StringLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stringLiteral)
        try:
            self.state = 140
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [KDParser.SimpleString]:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.match(KDParser.SimpleString)
                pass
            elif token in [KDParser.RawString]:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.match(KDParser.RawString)
                pass
            elif token in [KDParser.BlockStringStart]:
                self.enterOuterAlt(localctx, 3)
                self.state = 137
                self.blockString()
                pass
            elif token in [KDParser.BlockRawStringStart]:
                self.enterOuterAlt(localctx, 4)
                self.state = 138
                self.blockRawString()
                pass
            elif token in [KDParser.BlockRawAltStringStart]:
                self.enterOuterAlt(localctx, 5)
                self.state = 139
                self.blockRawAltString()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockStringContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BlockStringStart(self):
            return self.getToken(KDParser.BlockStringStart, 0)

        def BlockStringEnd(self):
            return self.getToken(KDParser.BlockStringEnd, 0)

        def BlockStringChunk(self, i:int=None):
            if i is None:
                return self.getTokens(KDParser.BlockStringChunk)
            else:
                return self.getToken(KDParser.BlockStringChunk, i)

        def getRuleIndex(self):
            return KDParser.RULE_blockString

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockString" ):
                listener.enterBlockString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockString" ):
                listener.exitBlockString(self)




    def blockString(self):

        localctx = KDParser.BlockStringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_blockString)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(KDParser.BlockStringStart)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==KDParser.BlockStringChunk:
                self.state = 143
                self.match(KDParser.BlockStringChunk)
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 149
            self.match(KDParser.BlockStringEnd)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockRawStringContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BlockRawStringStart(self):
            return self.getToken(KDParser.BlockRawStringStart, 0)

        def BlockRawStringEnd(self):
            return self.getToken(KDParser.BlockRawStringEnd, 0)

        def BlockRawStringChunk(self, i:int=None):
            if i is None:
                return self.getTokens(KDParser.BlockRawStringChunk)
            else:
                return self.getToken(KDParser.BlockRawStringChunk, i)

        def getRuleIndex(self):
            return KDParser.RULE_blockRawString

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockRawString" ):
                listener.enterBlockRawString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockRawString" ):
                listener.exitBlockRawString(self)




    def blockRawString(self):

        localctx = KDParser.BlockRawStringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_blockRawString)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(KDParser.BlockRawStringStart)
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==KDParser.BlockRawStringChunk:
                self.state = 152
                self.match(KDParser.BlockRawStringChunk)
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 158
            self.match(KDParser.BlockRawStringEnd)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockRawAltStringContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BlockRawAltStringStart(self):
            return self.getToken(KDParser.BlockRawAltStringStart, 0)

        def BlockRawAltStringEnd(self):
            return self.getToken(KDParser.BlockRawAltStringEnd, 0)

        def BlockRawAltStringChunk(self, i:int=None):
            if i is None:
                return self.getTokens(KDParser.BlockRawAltStringChunk)
            else:
                return self.getToken(KDParser.BlockRawAltStringChunk, i)

        def getRuleIndex(self):
            return KDParser.RULE_blockRawAltString

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockRawAltString" ):
                listener.enterBlockRawAltString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockRawAltString" ):
                listener.exitBlockRawAltString(self)




    def blockRawAltString(self):

        localctx = KDParser.BlockRawAltStringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_blockRawAltString)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(KDParser.BlockRawAltStringStart)
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==KDParser.BlockRawAltStringChunk:
                self.state = 161
                self.match(KDParser.BlockRawAltStringChunk)
                self.state = 166
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 167
            self.match(KDParser.BlockRawAltStringEnd)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DurationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CompoundDuration(self):
            return self.getToken(KDParser.CompoundDuration, 0)

        def DayDuration(self):
            return self.getToken(KDParser.DayDuration, 0)

        def HourDuration(self):
            return self.getToken(KDParser.HourDuration, 0)

        def MinuteDuration(self):
            return self.getToken(KDParser.MinuteDuration, 0)

        def SecondDuration(self):
            return self.getToken(KDParser.SecondDuration, 0)

        def MillisecondDuration(self):
            return self.getToken(KDParser.MillisecondDuration, 0)

        def NanosecondDuration(self):
            return self.getToken(KDParser.NanosecondDuration, 0)

        def getRuleIndex(self):
            return KDParser.RULE_duration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDuration" ):
                listener.enterDuration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDuration" ):
                listener.exitDuration(self)




    def duration(self):

        localctx = KDParser.DurationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_duration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << KDParser.CompoundDuration) | (1 << KDParser.DayDuration) | (1 << KDParser.HourDuration) | (1 << KDParser.MinuteDuration) | (1 << KDParser.SecondDuration) | (1 << KDParser.MillisecondDuration) | (1 << KDParser.NanosecondDuration))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QuantityContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IntegerQuantityLiteral(self):
            return self.getToken(KDParser.IntegerQuantityLiteral, 0)

        def DecimalQuantityLiteral(self):
            return self.getToken(KDParser.DecimalQuantityLiteral, 0)

        def getRuleIndex(self):
            return KDParser.RULE_quantity

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuantity" ):
                listener.enterQuantity(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuantity" ):
                listener.exitQuantity(self)




    def quantity(self):

        localctx = KDParser.QuantityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_quantity)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            _la = self._input.LA(1)
            if not(_la==KDParser.IntegerQuantityLiteral or _la==KDParser.DecimalQuantityLiteral):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RangeOpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def InclusiveRangeOp(self):
            return self.getToken(KDParser.InclusiveRangeOp, 0)

        def ExclusiveRangeOp(self):
            return self.getToken(KDParser.ExclusiveRangeOp, 0)

        def ExclusiveLeftOp(self):
            return self.getToken(KDParser.ExclusiveLeftOp, 0)

        def ExclusiveRightOp(self):
            return self.getToken(KDParser.ExclusiveRightOp, 0)

        def getRuleIndex(self):
            return KDParser.RULE_rangeOp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRangeOp" ):
                listener.enterRangeOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRangeOp" ):
                listener.exitRangeOp(self)




    def rangeOp(self):
